--- a/src/components/PostCard/Post.module.css
+++ b/src/components/PostCard/Post.module.css
@@ -1,6 +1,7 @@
 .post {
     text-align: center;
     width: 282px;
+    height: 100%;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
     border-radius: 0px 0px 10px 10px;
     padding-bottom: 1.5rem;
@@ -13,6 +14,7 @@
 
 .capa {
     width: 100%;
+    height: 312px;
 }
 
 .titulo {
